# dohyo-template

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  index.html  main.html  main_8c.html  main_8c.js  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html
docs/html/search/: all_0.js  all_1.js  all_2.js  defines_0.js  enums_0.js  enumvalues_0.js  functions_1.js  pages_0.js  pages_1.js  searchdata.js
src/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  domino.c  main.c
